--- a/Assignments/Attempt/029_power_rec/Makefile
+++ b/Assignments/Attempt/029_power_rec/Makefile
@@ -1,9 +1,3 @@
-CFLAGS = -Wall -Werror -std=gnu99 -pedantic
-test-power: test-power.o power.o
-	gcc $(CFLAGS) -o test-power $^
-%.o: %.c
-	gcc -c $(CFLAGS) $<
-
-.PHONY: clean
-clean:
-	rm -f *.o *~ *.txt test-power
+CFLAGS=-Wall -Werror -pedantic -std=gnu99
+power: power.c
+	gcc ${CFLAGS} -o power power.c
