--- a/Assignments/Attempt/029_power_rec/Makefile
+++ b/Assignments/Attempt/029_power_rec/Makefile
@@ -1,3 +1,5 @@
 CFLAGS=-Wall -Werror -pedantic -std=gnu99
-power: power.c
-	gcc ${CFLAGS} -o power power.c
+test-power: power.o test-power.c
+	gcc $(CFLAGS) -o test-power test-power.c power.o
+power.o: power.c
+	gcc $(CFLAGS) -c power.c
